--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@leafygreen-ui/badge": "^5.0.1",
+    "@leafygreen-ui/tabs": "^8.0.0",
+    "bootstrap": "^5.1.3",
+    "mongodb": "^4.7.0",
     "next": "12.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "plotly.js": "^2.12.1",
+    "quagga": "^0.12.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-plotly.js": "^2.5.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.18.0",
