--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@leafygreen-ui/badge": "^5.0.1",
     "@leafygreen-ui/tabs": "^8.0.0",
+    "@react-pdf/renderer": "^2.3.0",
     "bootstrap": "^5.1.3",
     "mongodb": "^4.7.0",
     "next": "12.2.0",
